--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,9 @@
 
-<ng-include src="'views/error.html'"></ng-include>
+<ng-include src="'views/error.html'" ng-init="error = login.error" ng-if="login.error"></ng-include>
 
-<form ng-submit="login.signin()">
+<ng-include src="'views/register.html'" ng-if="!fantasy.uid" ng-show="login.mode === 'register'" ng-controller="RegisterCtrl as register"></ng-include>
+
+<form ng-submit="login.signin()" ng-show="login.mode !== 'register'">
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-lg-push-4 col-sm-6 col-sm-push-3">
@@ -47,7 +49,7 @@
                     <div class="form-group">
                       <div class="row">
                         <div class="col-sm-10 col-sm-push-1">
-                          <p class="margin-no"><a class="btn btn-flat btn-block waves-attach" ng-href="#/register">Create an account</a></p>
+                          <p class="margin-no"><a ng-click="login.mode = 'register'" class="btn btn-flat btn-block waves-attach">Create an account</a></p>
                         </div>
                         <!-- <div class="col-md-5 col-md-push-1 col-sm-5 col-xs-6">
                           <div class="checkbox checkbox-adv">
