--- a/views/profile.html
+++ b/views/profile.html
@@ -8,12 +8,12 @@
   <div class="card">
     <div class="card-main">
 
-      <form ng-submit="update()">
+      <form ng-submit="profile.update()">
       	<div class="card-inner text-right">
 
       		<div class="form-group text-left">
       			<label>Display Name</label>
-      			<input type="text" ng-model="newDisplayName" class="form-control" />
+      			<input type="text" ng-model="profile.displayname" class="form-control" />
       		</div>
 
       		<input type="submit" value="Update Profile" class="btn btn-green btn-flat waves-attach waves-button waves-light" />
