--- a/views/challenges.html
+++ b/views/challenges.html
@@ -1,6 +1,6 @@
 <div class="content-heading">
   <div class="col-sm-12">
-   <h3 class="heading">Drafts</h3>
+   <h3 class="heading">Current Drafts</h3>
   </div>
 </div>
 
@@ -13,10 +13,10 @@
         <nav class="margin-top-no tab-nav">
           <ul class="nav nav-justified">
             <li class="active">
-              <a class="waves-attach waves-effect" data-toggle="tab" href="#friend_tab" target="_self">Friends <span class="label" ng-if="friend.draftList.length > 0">{{friend.draftList.length}}</span></a>
+              <a class="waves-attach waves-effect" data-toggle="tab" href="#friend_tab" target="_self">Friends <span class="label label-red" ng-if="challenges.friends.draft.length > 0">{{challenges.friends.draft.length}}</span></a>
             </li>
             <li>
-              <a class="waves-attach waves-effect" data-toggle="tab" href="#player_tab" target="_self">Users <span class="label" ng-if="users.draftList.length > 0">{{users.draftList.length}}</span></a>
+              <a class="waves-attach waves-effect" data-toggle="tab" href="#player_tab" target="_self">Users <span class="label" ng-if="challenges.users.draft.length > 0">{{challenges.users.draft.length}}</span></a>
             </li>
             <!-- <li>
               <a class="waves-attach waves-effect" data-toggle="tab" href="#request_tab" target="_self">Requests <span class="label label-red" ng-if="users.received.length > 0 || friends.received.length > 0">{{users.received.length + friends.received.length}}</span></a>
@@ -26,13 +26,13 @@
         <div class="card-inner margin-top-no">
           <div class="tab-content">
             <div class="tab-pane fade active in" id="friend_tab">
-              <p ng-show="!friends.draftList" ng-cloak>No friend challenges</p>
-              <ng-include src="'views/challenges/list.html'" ng-if="friends.draftList.length > 0" ng-init="challenges = friendChallenges.challenges"></ng-include>
+              <p ng-show="challenges.friends.draft.length === 0" ng-cloak>No active friend challenges</p>
+              <ng-include src="'views/challenges/list.html'" ng-if="challenges.friends.draft.length > 0" ng-init="challenges = challenges.friends.details"></ng-include>
               <!-- <ng-include src="'views/challenges/list.html'" ng-if="friends.challenges.length > 0" ng-init="challenges = friends.challenges"></ng-include> -->
             </div>
             <div class="tab-pane fade" id="player_tab">
-              <p ng-show="!users.challenges.length" ng-cloak>No user challenges.</p>
-              <ng-include src="'views/challenges/list.html'" ng-if="users.challenges.length > 0" ng-init="challenges = users.challenges"></ng-include>
+              <p ng-show="challenges.users.draft.length === 0" ng-cloak>No active user challenges.</p>
+              <ng-include src="'views/challenges/list.html'" ng-if="challenges.users.challenges.length > 0" ng-init="challenges = users.challenges"></ng-include>
             </div>
 
             <!-- <div class="tab-pane fade" id="request_tab">
