--- a/views/home.html
+++ b/views/home.html
@@ -15,11 +15,20 @@
   <div class="col-sm-12">
     <div class="card">
       <div class="card-main">
-          <div class="card-inner margin-bottom-no">
-            <h3 class="margin-top-no">Current Matchup</h3>
-            <p ng-cloak ng-show="!home.challenges.friends.gameList && !home.challenges.users.gameList">No current matchups</p>
-            <ng-include src="'views/challenges/list.html'" ng-if="home.challenges.friends.gameList" ng-init="challenges = home.challenges.friends.challenges;game = true;"></ng-include>
-            <ng-include src="'views/challenges/list.html'" ng-if="home.challenges.users.gameList" ng-init="challenges = home.challenges.users.challenges;game = true;"></ng-include>
+          <div class="card-inner">
+
+            <div ng-cloak ng-show="home.friends.game.length === 0 && home.users.game.length === 0" class="text-center">
+              <h3 class="margin-top-no">No current games available for this week</h3>
+              <p>Complete your <a ng-href="#/challenges">drafts</a> and <a ng-href="#/friends">challenge your friends</a></p>
+            </div>
+            
+            <div ng-cloak ng-if="home.friends.game.length > 0 || home.users.game.length > 0">
+              <h3 class="margin-top-no">Current Matchup</h3>
+              <p>No current matchups</p>
+              <ng-include src="'views/challenges/list.html'" ng-if="home.friends.game.length > 0" ng-init="challenges = home.friends.challenges;game = true;"></ng-include>
+              <ng-include src="'views/challenges/list.html'" ng-if="home.users.game.length > 0" ng-init="challenges = home.users.challenges;game = true;"></ng-include>
+            </div>
+
           </div>
         </div>
     </div>
