--- a/views/friends.html
+++ b/views/friends.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="col-xx-12">
-  <p class="text-center" ng-show="!friends.list && !friends.loading" ng-cloak><i class="mdi mdi-emoticon-sad icon-2x"></i> No friends</p>
+  <p class="text-center" ng-show="friends.my.list.length === 0 && !fantasy.loading" ng-cloak><i class="mdi mdi-emoticon-sad icon-2x"></i> No friends</p>
 </div>
 
 <div class="clearfix"></div>
