--- a/views/error.html
+++ b/views/error.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="card" ng-cloak ng-show="error">
+  <div class="card" ng-cloak ng-show="fantasy.error">
     <div class="card-main card-red">
       <div class="card-inner">
-        <p class="card-heading">{{error}}</p>
+        <p class="card-heading">{{fantasy.error}}</p>
       </div>
     </div>
   </div>
