--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,3 @@
-
-<ng-include src="'views/error.html'" ng-init="error = login.error" ng-if="login.error"></ng-include>
-
 <ng-include src="'views/register.html'" ng-if="!fantasy.uid" ng-show="login.mode === 'register'" ng-controller="RegisterCtrl as register"></ng-include>
 
 <form ng-submit="login.signin()" ng-show="login.mode !== 'register'">
@@ -42,26 +39,15 @@
                     <div class="form-group">
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
-                          <button type="submit" ng-disabled="isLoading" class="btn btn-flat btn-green btn-block waves-attach waves-button">Sign In</button>
+                          <button type="submit" ng-disabled="fantasy.loading" class="btn btn-flat btn-green btn-block waves-attach waves-button">Sign In</button>
                         </div>
                       </div>
                     </div>
                     <div class="form-group">
                       <div class="row">
                         <div class="col-sm-10 col-sm-push-1">
-                          <p class="margin-no"><a ng-click="login.mode = 'register'" class="btn btn-flat btn-block waves-attach">Create an account</a></p>
+                          <p class="margin-no"><a ng-click="login.mode = 'register';fantasy.error = false" class="btn btn-flat btn-block waves-attach">Create an account</a></p>
                         </div>
-                        <!-- <div class="col-md-5 col-md-push-1 col-sm-5 col-xs-6">
-                          <div class="checkbox checkbox-adv">
-                            <label for="doc_login_remember">
-                              <input class="access-hide" id="doc_login_remember" name="doc_login_remember" type="checkbox">Stay signed in
-                              <span class="circle"></span><span class="circle-check"></span><span class="circle-icon icon">done</span>
-                            </label>
-                          </div>
-                        </div>
-                        <div class="col-md-6 col-sm-7 col-xs-6">
-                            <p class="margin-no pull-right"><a class="btn btn-flat btn-blue waves-attach" ng-href="#/register">Create an account</a></p>
-                        </div> -->
                       </div>
                     </div>
                   </form>
