--- a/views/register.html
+++ b/views/register.html
@@ -1,7 +1,4 @@
-
-<ng-include src="'views/error.html'" ng-init="error = login.error" ng-if="login.error"></ng-include>
-
-<form ng-submit="createNewAccount()">
+<form ng-submit="register.create()">
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-lg-push-4 col-sm-6 col-sm-push-3">
@@ -25,7 +22,7 @@
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
                           <label class="floating-label" for="doc_login_username">Username</label>
-                          <input class="form-control" id="user" type="text" ng-model="user" autocomplete="new-password">
+                          <input class="form-control" id="user" type="text" ng-model="register.user" autocomplete="new-password">
                         </div>
                       </div>
                     </div>
@@ -33,7 +30,7 @@
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
                           <label class="floating-label" for="doc_login_password">Password</label>
-                          <input class="form-control" id="pass" type="password" ng-model="password"  autocomplete="new-password">
+                          <input class="form-control" id="pass" type="password" ng-model="register.password"  autocomplete="new-password">
                         </div>
                       </div>
                     </div>
@@ -41,14 +38,14 @@
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
                           <label class="floating-label" for="doc_login_password">Confirm Password</label>
-                          <input class="form-control" id="pass" type="password" ng-model="cpassword"  autocomplete="new-password">
+                          <input class="form-control" id="pass" type="password" ng-model="register.cpassword"  autocomplete="new-password">
                         </div>
                       </div>
                     </div>
                     <div class="form-group">
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
-                          <button type="submit" class="btn btn-block btn-flat btn-green waves-attach">Register</button>
+                          <button type="submit" ng-disabled="fantasy.loading" class="btn btn-block btn-flat btn-green waves-attach">Register</button>
                         </div>
                       </div>
                       <div class="form-group">
