--- a/views/users.html
+++ b/views/users.html
@@ -43,13 +43,18 @@
           <td class="user-name">
             <a class="btn btn-flat username">{{user.displayname || user.username}}</a>
           </td>
-          <td class="text-right" width="100">
+          <td class="text-right" width="150">
 
-            <span ng-show="users.challenges.sent.indexOf(user.id) < 0" ng-cloak>
+            <span ng-show="users.challenges.sent.indexOf(user.id) < 0" ng-hide="users.challenges.received.indexOf(user.id) >= 0 || users.challenges.draft.indexOf(user.id) >= 0 || users.challenges.game.indexOf(user.id) >= 0" ng-cloak>
               <a ng-click="users.challenge(user)" class="btn btn-block btn-green btn-flat waves-attach">Challenge</a>
             </span>
 
-            <span ng-show="users.challenges.sent.indexOf(user.id) >= 0" ng-cloak>
+            <div ng-repeat="detail in users.challenges.details" ng-if="users.challenges.draft.indexOf(user.id) >= 0 || users.challenges.game.indexOf(user.id) >= 0">
+              <a ng-href="#/draft/{{detail.game_id}}" ng-if="users.challenges.draft.indexOf(user.id) >= 0" class="btn btn-block btn-green btn-flat waves-attach">Enter Draft</a>
+              <a ng-href="#/game/{{detail.game_id}}" ng-if="users.challenges.game.indexOf(user.id) >= 0" class="btn btn-block btn-green btn-flat waves-attach">Enter Game</a>
+            </div>
+
+            <span ng-show="users.challenges.sent.indexOf(user.id) >= 0 || users.challenges.received.indexOf(user.id) >= 0" ng-cloak>
               <a class="btn btn-block btn-disabled btn-flat waves-attach">Challenged</i></a>
             </span>
 
