--- a/views/profile.html
+++ b/views/profile.html
@@ -16,6 +16,11 @@
       			<input type="text" ng-model="profile.displayname" class="form-control" />
       		</div>
 
+          <div class="form-group text-left">
+            <label>Profile Photo (url)</label>
+            <input type="text" ng-model="profile.photo" class="form-control" placeholder="http://" />
+          </div>
+
       		<input type="submit" value="Update Profile" class="btn btn-green btn-flat waves-attach waves-button waves-light" />
       	</div>
       </form>
