--- a/views/draft.html
+++ b/views/draft.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="col-sm-12" ng-if="draft.draft_order">
+<div class="col-sm-12" ng-if="draft.draft_order"  ng-hide="showPlayerDetails">
   
   <h3 class="text-center margin-top-sm" ng-show="draft.draft_order[draft.round] === fantasy.uid" ng-cloak>Select a player below</h3>
 
