--- a/views/login.html
+++ b/views/login.html
@@ -1,63 +1,46 @@
 <ng-include src="'views/register.html'" ng-if="!fantasy.uid" ng-show="login.mode === 'register'" ng-controller="RegisterCtrl as register"></ng-include>
 
 <form ng-submit="login.signin()" ng-show="login.mode !== 'register'">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4 col-lg-push-4 col-sm-6 col-sm-push-3">
-        <section class="content-inner">
-          <div class="card-wrap">
-            <div class="card">
-              <div class="card-main">
-                <div class="card-header">
-                  <div class="card-inner">
-                    <h1 class="card-heading">Login</h1>
-                  </div>
-                </div>
-                <div class="card-inner">
-                  <!-- <p class="text-center">
-                    <span class="avatar avatar-inline avatar-lg no-radius">
-                      <img alt="Login" src="images/helmet.jpg">
-                    </span>
-                  </p> -->
-                  <form class="form" action="index.html">
-                    <div class="form-group form-group-label">
-                      <div class="row">
-                        <div class="col-md-10 col-md-push-1">
-                          <label class="floating-label" for="doc_login_username">Username</label>
-                          <input class="form-control" id="user" type="text" ng-model="login.user" autocomplete="new-password">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group form-group-label">
-                      <div class="row">
-                        <div class="col-md-10 col-md-push-1">
-                          <label class="floating-label" for="doc_login_password">Password</label>
-                          <input class="form-control" id="pass" type="password" ng-model="login.password"  autocomplete="new-password">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="row">
-                        <div class="col-md-10 col-md-push-1">
-                          <button type="submit" ng-disabled="fantasy.loading" class="btn btn-flat btn-green btn-block waves-attach waves-button">Sign In</button>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="row">
-                        <div class="col-sm-10 col-sm-push-1">
-                          <p class="margin-no"><a ng-click="login.mode = 'register';fantasy.error = false" class="btn btn-flat btn-block waves-attach">Create an account</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
-                </div>
+  <section class="form">
+    <div class="card-wrap">
+      <div class="card">
+        <div class="card-main">
+          <div class="card-header">
+            <h3>Login</h3>
+          </div>
+          <div class="form-group form-group-label">
+            <div class="row">
+              <div class="col-sm-12">
+                <label class="floating-label" for="user">Username</label>
+                <input class="form-control" id="user" type="text" ng-model="login.user" autocomplete="new-password" placeholder="Username">
               </div>
             </div>
           </div>
-          <div class="clearfix"></div>
-        </section>
+          <div class="form-group form-group-label">
+            <div class="row">
+              <div class="col-sm-12">
+                <label class="floating-label" for="pass">Password</label>
+                <input class="form-control" id="pass" type="password" ng-model="login.password"  autocomplete="new-password" placeholder="Password">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-sm-12">
+                <button type="submit" ng-disabled="fantasy.loading" class="btn btn-flat btn-green btn-block waves-attach waves-button">Sign In</button>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-sm-12">
+                <p class="margin-no"><a ng-click="login.mode = 'register';fantasy.error = false" class="btn btn-flat btn-block waves-attach">Create an account</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+    <div class="clearfix"></div>
+  </section>
 </form>
