--- a/views/register.html
+++ b/views/register.html
@@ -1,68 +1,53 @@
 <form ng-submit="register.create()">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4 col-lg-push-4 col-sm-6 col-sm-push-3">
-        <section class="content-inner">
-          <div class="card-wrap">
-            <div class="card">
-              <div class="card-main">
-                <div class="card-header">
-                  <div class="card-inner">
-                    <h1 class="card-heading">Register</h1>
-                  </div>
-                </div>
-                <div class="card-inner">
-                  <!-- <p class="text-center">
-                    <span class="avatar avatar-inline avatar-lg">
-                      <img alt="Register" src="images/users/avatar-001.jpg">
-                    </span>
-                  </p> -->
-                  <form class="form" action="index.html">
-                    <div class="form-group form-group-label">
-                      <div class="row">
-                        <div class="col-md-10 col-md-push-1">
-                          <label class="floating-label" for="doc_login_username">Username</label>
-                          <input class="form-control" id="user" type="text" ng-model="register.user" autocomplete="new-password">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group form-group-label">
-                      <div class="row">
-                        <div class="col-md-10 col-md-push-1">
-                          <label class="floating-label" for="doc_login_password">Password</label>
-                          <input class="form-control" id="pass" type="password" ng-model="register.password"  autocomplete="new-password">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group form-group-label">
-                      <div class="row">
-                        <div class="col-md-10 col-md-push-1">
-                          <label class="floating-label" for="doc_login_password">Confirm Password</label>
-                          <input class="form-control" id="pass" type="password" ng-model="register.cpassword"  autocomplete="new-password">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="row">
-                        <div class="col-md-10 col-md-push-1">
-                          <button type="submit" ng-disabled="fantasy.loading" class="btn btn-block btn-flat btn-green waves-attach">Register</button>
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="row">
-                          <div class="col-sm-10 col-sm-push-1">
-                            <p class="margin-no"><a class="btn btn-flat btn-block waves-attach" ng-click="login.mode = null">Back to login</a></p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
+  <section class="form">
+    <div class="card-wrap">
+      <div class="card">
+        <div class="card-main">
+          <div class="card-header">
+            <h3>Register</h3>
+          </div>
+
+          <div class="form-group form-group-label">
+            <div class="row">
+              <div class="col-sm-12">
+                <label class="floating-label" for="doc_login_username">Username</label>
+                <input class="form-control" id="user" type="text" ng-model="register.user" autocomplete="new-password">
+              </div>
+            </div>
+          </div>
+          <div class="form-group form-group-label">
+            <div class="row">
+              <div class="col-sm-12">
+                <label class="floating-label" for="doc_login_password">Password</label>
+                <input class="form-control" id="pass" type="password" ng-model="register.password"  autocomplete="new-password">
+              </div>
+            </div>
+          </div>
+          <div class="form-group form-group-label">
+            <div class="row">
+              <div class="col-sm-12">
+                <label class="floating-label" for="doc_login_password">Confirm Password</label>
+                <input class="form-control" id="pass" type="password" ng-model="register.cpassword"  autocomplete="new-password">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-sm-12">
+                <button type="submit" ng-disabled="fantasy.loading" class="btn btn-block btn-flat btn-green waves-attach">Register</button>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-sm-12">
+                  <p class="margin-no"><a class="btn btn-flat btn-block waves-attach" ng-click="login.mode = null">Back to login</a></p>
                 </div>
               </div>
             </div>
           </div>
-        </section>
+
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 </form>
