--- a/views/error.html
+++ b/views/error.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="card" ng-cloak ng-show="fantasy.error">
-    <div class="card-main card-red">
+  <div class="card card-error" ng-cloak ng-show="fantasy.error">
+    <div class="card-main">
       <div class="card-inner">
         <p class="card-heading">{{fantasy.error}}</p>
       </div>
