--- a/views/login.html
+++ b/views/login.html
@@ -31,6 +31,13 @@
               </div>
             </div>
           </div>
+          <div class="form-group login-error" ng-show="fantasy.error">
+            <div class="row">
+              <div class="col-sm-12">
+                {{fantasy.error}}
+              </div>
+            </div>
+          </div>
           <div class="form-group">
             <div class="row">
               <div class="col-sm-12">
