--- a/views/draft.html
+++ b/views/draft.html
@@ -5,25 +5,25 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-sm-12" ng-if="draft.draft_order"  ng-hide="showPlayerDetails">
-    
-    <h3 class="text-center margin-top-sm" ng-show="draft.draft_order[draft.round] === fantasy.uid" ng-cloak>Select a player below</h3>
+<!-- <div class="row"> -->
+<div ng-if="draft.draft_order"  ng-hide="showPlayerDetails">
+  
+  <h3 class="text-center margin-top-sm" ng-show="draft.draft_order[draft.round] === fantasy.uid" ng-cloak>Select a player below</h3>
 
-    <div class="col-sm-12" ng-show="draft.draft_order[draft.round] !== fantasy.uid" ng-cloak>
-      <div class="card">
-        <aside class="card-side">
-          <span class="card-heading md-icon md-info-outline"></span>
-        </aside>
-        <div class="card-main">
-          <div class="card-inner">
-            <p class="card-heading">Warning</p>
-            <p>Please wait for your turn in the next round.</p>
-          </div>
+  <div class="col-sm-12" ng-show="draft.draft_order[draft.round] !== fantasy.uid" ng-cloak>
+    <div class="card">
+      <aside class="card-side">
+        <span class="card-heading md-icon md-info-outline"></span>
+      </aside>
+      <div class="card-main">
+        <div class="card-inner">
+          <p class="card-heading">Warning</p>
+          <p>Please wait for your turn in the next round.</p>
         </div>
       </div>
     </div>
   </div>
 </div>
+<!-- </div> -->
 
 <ng-include src="'views/player/list.html'" ng-if="draft.my_players" ng-init="players.position = draft.position"></ng-include>
