--- a/views/register.html
+++ b/views/register.html
@@ -37,6 +37,13 @@
                 <button type="submit" ng-disabled="fantasy.loading" class="btn btn-block btn-flat btn-green waves-attach">Register</button>
               </div>
             </div>
+            <div class="form-group login-error" ng-show="fantasy.error">
+            <div class="row">
+              <div class="col-sm-12">
+                {{fantasy.error}}
+              </div>
+            </div>
+          </div>
             <div class="form-group">
               <div class="row">
                 <div class="col-sm-12">
