--- a/views/game.html
+++ b/views/game.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="col-sm-6" ng-class="{'col-sm-12': !game.their_players}">
+<div class="col-sm-6" ng-class="{'col-sm-12': !game.their_players}" ng-hide="showPlayerDetails">
 	<div class="row">
 		<div class="col-sm-6">
     	<h3>{{fantasy.displayname || fantasy.username}}</h3>
@@ -14,21 +14,25 @@
 			<h3>{{game.your_points || "0.0"}}</h3>
 		</div>
 	</div>
-	<ng-include src="'views/roster.html'" ng-init="showteam = true;changeRoster = true;showpos = true;showpoints = true;draft = game;week = game.week" ng-if="game.my_players"></ng-include>
+	<ng-include src="'views/roster.html'" ng-init="showteam = true;draft.my_players = game.my_players;changeRoster = true;showpos = true;showpoints = true;draft = game;week = game.week" ng-if="game.my_players"></ng-include>
 
 </div>
 
-<div class="col-sm-6" ng-show="game.their_players">
+<div class="col-sm-6" ng-hide="showPlayerDetails || !game.their_players">
 	<div class="row">
 		<div class="col-sm-6">
-			<h3>{{game.opponent}}</h3>
+			<h3>{{game.opponent.displayname || game.opponent.username}}</h3>
 		</div>
 		<div class="col-sm-6 text-right">
 			<h3>{{game.their_points || "0.0"}}</h3>
 		</div>
 	</div>
 
-	<ng-include src="'views/roster.html'" ng-init="showteam = true;my_players = game.their_players;showpos = true;showpoints = true;week = game.week" ng-if="game.their_players"></ng-include>
+	<ng-include src="'views/roster.html'" ng-init="showteam = true;draft.my_players = game.their_players;showpos = true;showpoints = true;week = game.week" ng-if="game.their_players"></ng-include>
 
+</div>
+
+<div id="playerDetails" class="col-xx-12 padding-no" ng-show="showPlayerDetails">
+  <ng-include src="'views/player/profile.html'"></ng-include>
 </div>
 
