--- a/views/practice.html
+++ b/views/practice.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<!-- <ng-include src="'views/weeks.html'"></ng-include> -->
+<ng-include src="'views/weeks.html'"></ng-include>
 
 <div class="col-sm-12" ng-show="practice.game > 0" ng-cloak>
   <div class="col-xx-6" ng-if="currentWeek" ng-cloak>
