--- a/views/roster-change.html
+++ b/views/roster-change.html
@@ -37,7 +37,7 @@
   </div>
 </div>
 
-<form ng-submit="roster.confirmChange()" ng-hide="showPlayerDetails || roster.showConfirmation">
+<form ng-submit="roster.confirmChange()" ng-hide="showPlayerDetails || roster.showConfirmation || !roster.available">
   <div class="col-sm-6">
   	<h3>Selected player</h3>
   	<div ng-include src="'views/roster.html'" ng-init="draft.my_players = roster.selected;week = roster.week;selected = true" class="player-row" ng-if="roster.selected"></div>
@@ -49,7 +49,7 @@
   </div>
   
   <div class="col-sm-6">
-    <a ng-href="{{backButton}}" class="btn btn-flat">Cancel</a>
+    <a ng-href="#/game/{{roster.gameId}}" class="btn btn-flat">Cancel</a>
   </div>
   
   <div class="col-sm-6 text-right">
@@ -58,6 +58,12 @@
 
 </form>
 
-<div id="playerDetails" class="col-xx-12 padding-no" ng-show="showPlayerDetails">
+<div class="text-center" ng-cloak ng-show="!roster.available && roster.selected">
+  <h4>No players available to change</h4>
+  <a ng-href="#/game/{{roster.gameId}}" class="btn btn-flat">Go back</a>
+</div>
+
+<!-- <div id="playerDetails" class="col-xx-12 padding-no" ng-show="showPlayerDetails">
   <ng-include src="'views/player/profile.html'"></ng-include>
 </div>
+ -->
