--- a/views/game-settings.html
+++ b/views/game-settings.html
@@ -3,3 +3,28 @@
    <h3 class="heading">Game Settings</h3>
   </div>
 </div>
+
+<div class="col-sm-12">
+    <div class="card">
+      <div class="card-main">
+          <div class="col-sm-12">
+            <div class="card-table">
+              <div class="table-responsive">
+                <table class="table table-hover table-stripe">
+                  <tbody>
+                    <tr>
+                      <td>Forfeit</td>
+                      <td width="300" class="text-right">
+
+                        <a ng-click="settings.forfeit()" class="btn btn-green btn-flat">Forfeit Game</a>
+
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
