--- a/views/practice.html
+++ b/views/practice.html
@@ -6,7 +6,7 @@
 
 <ng-include src="'views/weeks.html'"></ng-include>
 
-<div class="col-sm-12" ng-show="practice.game > 0" ng-cloak>
+<!-- <div class="col-sm-12" ng-show="practice.game > 0" ng-cloak>
   <div class="col-xx-6" ng-if="currentWeek" ng-cloak>
     <h3>Week {{currentWeek}}</h3>
   </div>
@@ -15,10 +15,37 @@
   </div>
 
   <ng-include src="'views/roster.html'" ng-init="showteam = true;changeRoster = true;showpos = true;showpoints = true;" ng-if="api.main.my_players"></ng-include>
+</div> -->
+
+<div class="col-sm-12">
+    <div class="card">
+      <div class="card-main">
+          <div class="col-sm-12">
+            <div class="card-table" ng-if="practice.game_id > 0">
+              <div class="table-responsive">
+                <table class="table table-hover table-stripe">
+                  <tbody>
+                    <tr>
+                      <td>Week Practice</td>
+                      <td width="300" class="text-right">
+
+                        <a ng-href="#/game/{{practice.game_id}}" class="btn btn-green btn-flat">Game Center</a>
+
+                        <a ng-href="#/game/{{practice.game_id}}/settings" class="btn btn-green btn-flat">Settings</a>
+
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+        </div>
+    </div>
+  </div>
 </div>
 
 <div class="col-sm-12">
-  <div class="card" ng-show="practice.game === 0" ng-cloak>
+  <div class="card" ng-show="practice.game_id === 0" ng-cloak>
     <div class="card-main">
       <div class="card-inner">
         <div class="text-center">
