--- a/views/practice.html
+++ b/views/practice.html
@@ -17,11 +17,11 @@
   <ng-include src="'views/roster.html'" ng-init="showteam = true;changeRoster = true;showpos = true;showpoints = true;" ng-if="api.main.my_players"></ng-include>
 </div> -->
 
-<div class="col-sm-12">
+<div class="col-sm-12" ng-if="practice.game_id > 0">
     <div class="card">
       <div class="card-main">
           <div class="col-sm-12">
-            <div class="card-table" ng-if="practice.game_id > 0">
+            <div class="card-table">
               <div class="table-responsive">
                 <table class="table table-hover table-stripe">
                   <tbody>
@@ -44,8 +44,8 @@
   </div>
 </div>
 
-<div class="col-sm-12">
-  <div class="card" ng-show="practice.game_id === 0" ng-cloak>
+<div class="col-sm-12" ng-if="practice.game_id === 0" ng-cloak>
+  <div class="card">
     <div class="card-main">
       <div class="card-inner">
         <div class="text-center">
