--- a/views/users.html
+++ b/views/users.html
@@ -41,7 +41,7 @@
 
           </td>
           <td class="user-name">
-            <a class="btn btn-flat username">{{user.displayname || user.username}}</a>
+            <a ng-href="#/profile/{{user.id}}" class="btn btn-flat username">{{user.displayname || user.username}}</a>
           </td>
           <td class="text-right" width="150">
 
